<resources>
    <string name="app_name">Privatix</string>
    <string name="action_settings">Settings</string>
    <string name="main_activity_name">strongSwan</string>
    <string name="show_log">View log</string>
    <string name="search">Search</string>
    <string name="vpn_not_supported_title">VPN not supported</string>
    <string name="vpn_not_supported">Your device does not support VPN applications.\nPlease contact the manufacturer.</string>
    <string name="vpn_not_supported_during_lockdown">VPN connections are not supported in lockdown mode.</string>
    <string name="loading">Loading&#8230;</string>
    <string name="profile_not_found">Profile not found</string>
    <string name="strongswan_shortcut">strongSwan shortcut</string>
    <string name="log_title">Log</string>
    <string name="send_log">Send log file</string>
    <string name="empty_log">Log file is empty</string>
    <string name="log_mail_subject">strongSwan %1$s Log File</string>
    <string name="no_profiles">No VPN profiles.</string>
    <string name="add_profile">Add VPN profile</string>
    <string name="edit_profile">Edit</string>
    <string name="delete_profile">Delete</string>
    <string name="select_profiles">Select profiles</string>
    <string name="profiles_deleted">Selected profiles deleted</string>
    <string name="no_profile_selected">No profile selected</string>
    <string name="one_profile_selected">One profile selected</string>
    <string name="x_profiles_selected">%1$d profiles selected"</string>
    <string name="profile_edit_save">Save</string>
    <string name="profile_edit_cancel">Cancel</string>
    <string name="profile_name_label">Profile Name:</string>
    <string name="profile_name_hint">(use gateway address)</string>
    <string name="profile_gateway_label">Gateway:</string>
    <string name="profile_vpn_type_label">Type:</string>
    <string name="profile_username_label">Username:</string>
    <string name="profile_password_label">Password:</string>
    <string name="profile_password_hint">(prompt when needed)</string>
    <string name="profile_user_certificate_label">User certificate:</string>
    <string name="profile_user_select_certificate_label">Select user certificate</string>
    <string name="profile_user_select_certificate">Select a specific user certificate</string>
    <string name="profile_ca_label">CA certificate:</string>
    <string name="profile_ca_auto_label">Select automatically</string>
    <string name="profile_ca_select_certificate_label">Select CA certificate</string>
    <string name="profile_ca_select_certificate">Select a specific CA certificate</string>
    <string name="profile_show_advanced_label">Show advanced settings</string>
    <string name="profile_mtu_label">MTU:</string>
    <string name="profile_port_label">Server port:</string>
    <string name="profile_use_default_hint">(use default)</string>
    <string name="profile_split_tunneling_label">Split tunneling:</string>
    <string name="profile_split_tunnelingv4_title">Block IPv4 traffic not destined for the VPN</string>
    <string name="profile_split_tunnelingv6_title">Block IPv6 traffic not destined for the VPN</string>
    <string name="alert_text_no_input_gateway">Please enter the gateway address here</string>
    <string name="alert_text_no_input_username">Please enter your username here</string>
    <string name="alert_text_nocertfound_title">No CA certificate selected</string>
    <string name="alert_text_nocertfound">Please select one or activate <i>Select automatically</i></string>
    <string name="alert_text_out_of_range">Please enter a number in the range from %1$d - %2$d</string>
    <string name="tnc_notice_title">EAP-TNC may affect your privacy</string>
    <string name="tnc_notice_subtitle">Device data is sent to the gateway operator</string>
    <string name="tnc_notice_details">&lt;p>Trusted Network Connect (TNC) allows gateway operators to assess the health of a client device.&lt;/p>&lt;p>For that purpose the gateway operator may request data such as a unique identifier, a list of installed packages, system settings, or cryptographic checksums of files.&lt;/p>&lt;b>Any data will be sent only after verifying the gateway\'s identity.&lt;/b></string>
    <string name="trusted_certs_title">CA certificates</string>
    <string name="no_certificates">No certificates</string>
    <string name="reload_trusted_certs">Reload CA certificates</string>
    <string name="system_tab">System</string>
    <string name="user_tab">User</string>
    <string name="local_tab">Imported</string>
    <string name="delete_certificate_question">Delete certificate?</string>
    <string name="delete_certificate">The certificate will be permanently removed!</string>
    <string name="import_certificate">Import certificate</string>
    <string name="cert_imported_successfully">Certificate successfully imported</string>
    <string name="cert_import_failed">Failed to import certificate</string>
    <string name="state_label">Status:</string>
    <string name="profile_label">Profile:</string>
    <string name="disconnect">Disconnect</string>
    <string name="state_connecting">Connecting&#8230;</string>
    <string name="state_connected">Connected</string>
    <string name="state_disconnecting">Disconnecting&#8230;</string>
    <string name="state_disabled">No active VPN</string>
    <string name="state_error">Error</string>
    <string name="imc_state_label">Assessment:</string>
    <string name="imc_state_isolate">Restricted</string>
    <string name="imc_state_block">Failed</string>
    <string name="show_remediation_instructions">View remediation instructions</string>
    <string name="remediation_instructions_title">Remediation instructions</string>
    <string name="login_title">Enter password to connect</string>
    <string name="login_confirm">Connect</string>
    <string name="error_introduction">Failed to establish VPN:</string>
    <string name="error_lookup_failed">Gateway address lookup failed.</string>
    <string name="error_internet_connection">Please check your internet connection or try again later</string>
    <string name="error_unreachable">Gateway is unreachable.</string>
    <string name="error_peer_auth_failed">Verifying gateway authentication failed.</string>
    <string name="error_auth_failed">User authentication failed.</string>
    <string name="error_assessment_failed">Security assessment failed.</string>
    <string name="error_generic">Unspecified failure while connecting. Try reboot device</string>
    <string name="connecting_title">Connecting: %1$s</string>
    <string name="connecting_message">Establishing VPN with \""%1$s\".</string>
    <string name="vpn_connected">VPN connected</string>
    <string name="vpn_profile_connected">This VPN profile is currently connected!</string>
    <string name="reconnect">Reconnect</string>
    <string name="connect_profile_question">Connect %1$s?</string>
    <string name="replaces_active_connection">This will replace your active VPN connection!</string>
    <string name="connect">Connect</string>
    <string name="get_protected">GET PROTECTED</string>
    <string name="title_activity_get_started">GetStartedActivity</string>
    <string name="have_account">Already have an account?</string>
    <string name="login"><u>Log in</u></string>
    <string name="forgot_password"><u>Forgot Password?</u></string>
    <string name="pref_header_general">General</string>
    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>
    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>
    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>
    <string name="title_activity_login">Log in</string>
    <string name="title_activity_sign_up">Sign up</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">LOG IN</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_premium">Privatix premium</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="premium_monthly">Premium monthly</string>
    <string name="premium_yearly">Premium yearly</string>
    <string name="have_subscription">You already have a subscription to this plan</string>
    <string name="title_activity_recovery">Password recovery</string>
    <string name="password_recovered">Your password recovered</string>
    <string name="check_email">Please, check email and login again</string>
    <string name="recover">Recover</string>
    <string name="recover_back_btn">BACK</string>
    <string name="no_user_found">User not found</string>
    <string name="setting_account_type">Account type</string>
    <string name="setting_expiration_date">Expiration date</string>
    <string name="expiration_date_lifetime">Lifetime</string>
    <string name="setting_account_free">Free</string>
    <string name="setting_get_help">Get Help</string>
    <string name="setting_term_of_service">Terms of Service</string>
    <string name="setting_sharing">Share Privatix with friends</string>
    <string name="leave_feedback">Leave Feedback</string>
    <string name="setting_privacy_policy">Privacy Policy</string>
    <string name="setting_imprint">Imprint</string>
    <string name="setting_version">Version</string>
    <string name="setting_login">LOGIN</string>
    <string name="setting_sign_up">SIGN UP</string>
    <string name="show_network_alerts">Show network alerts</string>
    <string name="connect_on_startup">Connect on startup</string>
    <string name="send_error_logs">Send error logs</string>
    <string name="get_premium">Get Premium</string>
    <string name="tell_dialog_title">Tell us what do you think</string>
    <string name="tell_dialog_question">How Privatix works?</string>
    <string name="good">Good</string>
    <string name="bad">Bad</string>
    <string name="not_now">Not now</string>
    <string name="help_improve_dialog_title">Help us to improve</string>
    <string name="help_improve_dialog_question">Send a fast feedback</string>
    <string name="sure">Sure</string>
    <string name="servers_overloaded_dialog_title">Free servers overloaded</string>
    <string name="servers_overloaded_top_text">Please wait for a free slot</string>
    <string name="servers_overloaded_middle_text">Your queue position :</string>
    <string name="servers_overloaded_bottom_text">Stay on this screen or help us to add a new servers by watching ad video</string>
    <string name="servers_overloaded_premium">Premium</string>
    <string name="servers_overloaded_watch_video">Skip by Watching a Video</string>
    <string name="update_app_dialog_upgrade_play_store">Upgrade in the Play Store</string>
    <string name="update_app_dialog_download_new_apk">Download new .apk</string>
    <string name="update_app_dialog_dismiss">Dismiss</string>
</resources>