<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="15dp"
            android:text="@string/servers_overloaded_dialog_title"
            android:textAppearance="?android:textAppearanceLarge"
            android:textColor="@android:color/white" />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/servers_overloaded_top_text"
        android:textAppearance="?android:textAppearanceMedium" />


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/servers_overloaded_middle_text"
            android:textAppearance="?android:textAppearanceMedium" />

        <TextView
            android:id="@+id/tv_queue_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:text="1242"
            android:textAppearance="?android:textAppearanceMedium"
            android:textColor="@android:color/holo_red_light"
            android:textStyle="bold" />

    </LinearLayout>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:gravity="center"
        android:text="@string/servers_overloaded_bottom_text"
        android:textAppearance="?android:textAppearanceMedium" />


    <TextView
        android:id="@+id/tv_premium"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:background="@drawable/btn_server_overloaded"
        android:gravity="center"
        android:padding="5dp"
        android:text="@string/servers_overloaded_premium"
        android:textAllCaps="false"
        android:textAppearance="?android:textAppearanceMedium" />


    <TextView
        android:id="@+id/tv_watch_video"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/btn_server_overloaded"
        android:gravity="center"
        android:padding="5dp"
        android:text="@string/servers_overloaded_watch_video"
        android:textAllCaps="false"
        android:textAppearance="?android:textAppearanceMedium"
        android:textColor="@android:color/black"
        android:textStyle="bold" />

</LinearLayout>