<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical">


    <TextView
        android:id="@+id/tvPlayStore"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:background="@drawable/btn_server_overloaded"
        android:gravity="center"
        android:padding="5dp"
        android:text="@string/update_app_dialog_upgrade_play_store"
        android:textAllCaps="false"
        android:textAppearance="?android:textAppearanceMedium"
        android:textColor="@android:color/black"/>


    <TextView
        android:id="@+id/tvDownloadApk"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:background="@drawable/btn_server_overloaded"
        android:gravity="center"
        android:padding="5dp"
        android:text="@string/update_app_dialog_download_new_apk"
        android:textAllCaps="false"
        android:textAppearance="?android:textAppearanceMedium"
        android:textColor="@android:color/black" />


    <TextView
        android:id="@+id/tvDismiss"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/btn_server_overloaded"
        android:gravity="center"
        android:padding="5dp"
        android:text="@string/update_app_dialog_dismiss"
        android:textAllCaps="false"
        android:textAppearance="?android:textAppearanceMedium"
         />

</LinearLayout>